# locobot_ros2

./: .gitignore  README.md
install/: .tmux.conf  .vimrc  Ubuntu_install.md  install_drivers.sudo.3.sh  install_ros.sudo.1.sh  python_install_build.4.sh  venv.txt  workspace_setup.2.sh
locobot_bringup/: CMakeLists.txt  package.xml
locobot_bringup/config/: slam_toolbox_config.yaml
locobot_bringup/launch/: kobuki_remapped_launch.yaml  locobot_bringup.launch  locobot_bringup_launch.yaml  locobot_sim.launch
locobot_control/: CMakeLists.txt  INSTALL.md  package.xml
locobot_control/config/: dynamixels.yaml
locobot_control/include/locobot_control/: locobot_controller.h  locobot_controller.h.old
locobot_control/launch/: dynamixel_controllers_launch.yaml  main.launch
locobot_control/src/: locobot_controller.cpp  locobot_controller.cpp.new  locobot_controller.cpp.old
locobot_description/: CMakeLists.txt  package.xml  urdf.rviz
locobot_description/launch/: display.launch  gazebo.launch
locobot_description/meshes/: lidar_rough.STL
locobot_description/urdf/: interbotix_locobot_description_modified.urdf
locobot_navigation/: README.md  package.xml  setup.cfg  setup.py
locobot_navigation/launch/: lidar_launch.yaml  mapping_launch.xml  sim_lidar_launch.xml
locobot_navigation/locobot_navigation/: depth_image_to_laserscan.py  republish_scan.py  reverse_cmd_vel.py
locobot_navigation/scripts/: find_lidar_dead_points.py
