<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>locobot_description</name>
  <version>0.0.2</version>
  <description>
    <p>URDF Description package for locobot_description</p>
    <p>This package contains configuration data, 3D models and launch files
for locobot_description robot</p>
  </description>
  <author>Dhiraj Gandhi</author>
  <maintainer email="jpeng303@gatech.edu">Jing-Chen Peng</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros2launch</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
